# Proyecto-ABP-2-DAM

./: .gitignore  README.md  config_db.json  config_login.json  pyproject.toml
BACKUPS (1 FEBRERO A LAS 12.57)/tareas_db/: empleados.bson  empleados.metadata.json  proyectos.bson  proyectos.metadata.json  tareas.bson  tareas.metadata.json
entornovirt/: pyvenv.cfg
gestion_tareas/: main-area-personal.py  main-compartido-conmigo.py  main-conexion.py  main-detalle-tarea.py  main-login.py  main-mis-datos.py  main-nueva-tarea.py  main-tareas-atrasadas.py  main-tareas-pendientes.py  main-tareas-realizadas.py  main.py  main2.py  requirements.txt
gestion_tareas/entorno/: pyvenv.cfg
gestion_tareas/modelos/: consultas.py  crud.py  init.py
gestion_tareas/servicios/: db_manager.py  mongo_service.py  sesion_service.py
gestion_tareas/tests/: test_crud.py
gestion_tareas/utilidades/: settings.json  validaciones.py
gestion_tareas/vistas/: vista_area_personal.py  vista_compartido_conmigo.py  vista_conexion.py  vista_detalle_tarea.py  vista_login.py  vista_mis_datos.py  vista_nueva_tarea.py  vista_tareas_atrasadas.py  vista_tareas_pendientes.py  vista_tareas_realizadas.py
gestion_tareas/vistas/vistas-admin/: vista_auditoria.py  vista_crear_departamento.py  vista_crear_equipo.py  vista_gestionar_roles.py  vista_gestionar_usuario.py
gestion_tareas/vistas/vistas-usuario/: vista_compartido_conmigo.py  vista_conexion.py  vista_login.py  vista_mis_datos.py  vista_tareas_pendientes.py
gestion_tareas/vistas/vistas_admin/: vista-gestionar-departamentos.py  vista_area_admin.py  (+12 more)
(+12 files in other folders)
