[project]
name = "gestion-tareas"
version = "0.1.0"
description = "App de gestión de tareas"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet (>=0.80.5,<0.81.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "gestion_tareas.main:start_app"